@@ -1,3 +1,7 @@
+2012-10-21  Juan Pablo Santos (juanpablo AT apache DOT org)
+       
+       * ensure correct information on cobertura reports.
+       
 2012-10-21  Florian Holeczek (florianh AT apache DOT org)
 
        * some further fixes to license headers
